--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,5 @@
 development:
-  adapter: mysql
+  adapter: mysql2
   database: astest
   username: astest
   password: astest
@@ -7,7 +7,7 @@ development:
   pool: 5
   
 test:
-  adapter: mysql
+  adapter: mysql2
   database: astest_test
   username: astest
   password: astest
@@ -15,7 +15,7 @@ test:
   pool: 5
 
 production:
-  adapter: mysql
+  adapter: mysql2
   database: astest
   username: astest
   password: astest
